--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,8 @@ android {
         minSdkVersion(26)
         targetSdkVersion(33)
         applicationId = "de.max.troegel.gmaf"
-        versionCode = 5
-        versionName = "1.0"
+        versionCode = 8
+        versionName = "1.3"
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -61,12 +61,23 @@ android {
         dataBinding = true
     }
 
-
     kotlinOptions {
         jvmTarget = '1.8'
         freeCompilerArgs += [
                 "-Xopt-in=kotlin.RequiresOptIn"
         ]
+    }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+
+    sourceSets {
+        main {
+            java.srcDirs = ["src/main/java"]
+        }
     }
 
     // Resolve the library duplicates included in the local lib of the gmaf framework
@@ -102,16 +113,16 @@ dependencies {
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
     implementation("androidx.recyclerview:recyclerview:1.1.0")
     implementation("androidx.viewpager2:viewpager2:1.0.0")
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0")
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.2.0")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.2.0")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.1")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.1")
     implementation("androidx.room:room-runtime:2.4.3")
     implementation("androidx.room:room-ktx:2.4.3")
     implementation("androidx.preference:preference-ktx:1.2.0")
     implementation("com.google.android.material:material:1.8.0-alpha01")
     implementation("com.google.assistant.appactions:widgets:0.0.1")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
     implementation("org.koin:koin-androidx-viewmodel:2.2.2")
     implementation("com.github.bumptech.glide:glide:4.11.0")
     implementation("com.github.chrisbanes:PhotoView:2.3.0")
@@ -126,14 +137,32 @@ dependencies {
     implementation("com.google.code.gson:gson:2.9.1")
     implementation("com.github.GurtekSingh:OfflineDictionary-Android:0.1.1")
     implementation("android.arch.persistence.room:rxjava2:1.1.1")
+    implementation 'androidx.test:core-ktx:1.5.0'
     kapt("com.github.bumptech.glide:compiler:4.11.0")
     kapt("androidx.room:room-compiler:2.4.3")
-    testImplementation "org.mockito:mockito-inline:4.7.0"
+    androidTestImplementation("androidx.test.ext:junit:1.1.5")
+    androidTestImplementation("androidx.test.espresso:espresso-core:3.4.0")
+    androidTestImplementation "androidx.lifecycle:lifecycle-runtime-testing:2.5.1"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-process:2.5.1"
+
     testImplementation("io.kotest:kotest-assertions-core-jvm:4.1.2")
     testImplementation("androidx.arch.core:core-testing:2.1.0")
-    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.8")
     testImplementation("org.robolectric:robolectric:4.3.1")
     testImplementation("junit:junit:4.13.2")
-    androidTestImplementation("androidx.test.ext:junit:1.1.3")
-    androidTestImplementation("androidx.test.espresso:espresso-core:3.4.0")
+    testImplementation "androidx.lifecycle:lifecycle-runtime-testing:2.5.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.mockito:mockito-inline:4.7.0"
+    androidTestImplementation 'androidx.test:core:1.5.0'
+
+    androidTestImplementation("io.kotest:kotest-assertions-core-jvm:4.1.2")
+    androidTestImplementation("androidx.arch.core:core-testing:2.1.0")
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    androidTestImplementation("junit:junit:4.13.2")
+    androidTestImplementation "org.mockito:mockito-android:3.6.28"
+
 }
