--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity
             android:name=".app.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:configChanges="layoutDirection|locale|orientation|screenSize|keyboard|uiMode"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/Theme.GMAFClient">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
